2016-06-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm (check_amstatus): Remove not-idle
	  lines from amstatus result

2016-06-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm (check_amstatus): Remove not-idle
	  lines

2016-06-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* perl/Amanda/Report/human.pm (get_summary_info): Do not add spurious
	  space

2016-06-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* common-src/conffile.c (update_derived_values): create a default CONF
	  policy

2016-06-29  Jean-Louis Martineau <JMartineau@carbonite.com>
	* application-src/amrandom.pl: Allow level 1 backup, add SIZE-LEVEL-1
	  property
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,
	  installcheck/success-dumper-chunker+taper-flush.pl,
	  installcheck/success-dumper-chunker-taper.pl,
	  installcheck/success-dumper-taper.pl: Use amrandom, it have
	  consistent size

2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* server-src/amstatus.pl:Fix indentation
	* installcheck/Installcheck/Run.pm (check_amstatus): Do not check
	  dumper busy stat

2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* installcheck/Installcheck/Run.pm: Subtitute hostname
	* installcheck/success-dumper-chunker+dumper-chunker-taper-flush.pl,
	  installcheck/success-dumper-chunker+taper-flush.pl,
	  installcheck/success-dumper-chunker-taper.pl,
	  installcheck/success-dumper-taper.pl: Increase time length

2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* config/amanda/libs.m4: Set LIBCURL_USE_GNUTLS_NETTLE or
	  LIBCURL_USE_GNUTLS_GCRYPT depending on which crypto library
	  gnutls use
	* common-src/glib-util.c: Initialize gcrypt only if
	  LIBCURL_USE_GNUTLS_GCRYPT

2016-06-28  Jean-Louis Martineau <JMartineau@carbonite.com>
	* device-src/xfer-dest-taper-splitter.c: Fix error path
	* perl/Amanda/Report.pm: Fix exit_status